Issue #5. Making addon restartless. Definition of changes:  - changes into firexPixelUi.jsm, replaced separate createToolbarButton and    createPanel with single createOverlay function. That way toolbar button    looks the same as before being restartless (type="menu") and there is no    weird bug when clicking on "Upload layout" button.    Removed some unnecessary comments and stuff used for debugging.    Replaced old tag structure in overlay (the hbox#tools_panel replaced with    vbox#tools_pane and changed child vbox'es into hbox'es, that way the    structure seems to be more logical).  - modified content/lib/xul.js to handle the case when we pass document node    into build method.  - small changes into ui.css (previously overlay.css) after changes in overlay    tag structure

--- a/skin/ui.css
+++ b/skin/ui.css
@@ -39,10 +39,10 @@
     #thepanel {
         text-align: center;
     }
-    #thepanel hbox#pixel-layout, #thepanel hbox#tools_panel {
+    #thepanel hbox#pixel-layout {
         display: inline-block;
     }
-    vbox.buttons-wrap {
+    hbox.buttons-wrap {
         display: block;
     }
 }
